@@ -12,7 +12,8 @@ The Grinder 3.8 (Not yet released)
   Fix bug 3431287 and bug 3489034 - Ignore HttpOnly attributes in the
   middle of cookies. Thanks to Alex Crane and Jeremy for the reports.
 
-  TCPProxy HTTP recording: improve the extraction of common headers.
+  TCPProxy HTTP recording: improve the extraction of common headers to
+  reduce the number of common header sets.
 
   Re-implement TCPProxy support for the HTTPPlugin.initialTest property.
 
